[tool.poetry]
name = "pong_python"
version = "0.1.0"
description = "Simple pong game using Pygame"
authors = ["Simon Tallmyr <simon@tallmyr.se>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = {version = "^21.7b0", allow-prereleases = true}
flake8-black = "^0.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
